--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:gravity="center"
     android:background="@drawable/background_gradient">
 
     <TextView
         android:id="@+id/textview_heading"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
@@ -18,7 +16,10 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/dark_gray"
-        android:text="Select an Animal: " />
+        android:text="Select an Animal: "
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Spinner
         android:id="@+id/spinner_animal"
@@ -29,17 +30,23 @@
         android:background="@drawable/spinner_background"
         android:popupBackground="@drawable/spinner_popup_background"
         android:dropDownWidth="200dp"
-        android:dropDownHeight="200dp" />
+        android:dropDownHeight="200dp"
+        app:layout_constraintTop_toBottomOf="@+id/textview_heading"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
-    android:id="@+id/button_get_info"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:layout_marginBottom="16dp"
-    android:background="@drawable/button_background"
-    android:textColor="@color/white"
-    android:text="Get Animal Info" />
+        android:id="@+id/button_get_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button_background"
+        android:textColor="@color/white"
+        android:text="Get Animal Info"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_animal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/button_show_fact"
@@ -49,11 +56,14 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_background"
         android:textColor="@color/white"
-        android:text="Show Fun Fact" />
+        android:text="Show Fun Fact"
+        app:layout_constraintTop_toBottomOf="@+id/button_get_info"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/textview_animal_info"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
@@ -61,6 +71,9 @@
         android:layout_marginRight="10dp"
         android:textSize="21sp"
         android:textColor="@color/dark_gray"
-        android:fontFamily="sans-serif-condensed" />
+        android:fontFamily="sans-serif-condensed"
+        app:layout_constraintTop_toBottomOf="@+id/button_show_fact"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
